Horizontal Scroll and Background Color Fixed

--- a/static/main.css
+++ b/static/main.css
@@ -1,10 +1,19 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
     background-image: linear-gradient(to bottom right, rgb(54, 11, 54) 50%, rgb(163, 19, 132));
     color: white;
+    overflow-x: hidden;
 }
 
-
+.mainContainer{
+    width: 90vw;
+}
 .main {
  /* display: flexbox; */
  width: 90vw;
